# Trillia-Jupyter-Theme

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: publish.yml
docker/: Dockerfile
jupyterlab_trillia_theme/: install.json
scripts/: ensure_style.js  prepare_labextension.sh  sync_labextension.py
src/: index.ts
src/style/: fonts.css  icons.css  index.css  variables.css
style/: index.css
