[build-system]
requires = ["hatchling>=1.21.0", "jupyterlab>=4.0.0"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_trillia_theme"
version = "0.1.0"
description = "Trillia theme for JupyterLab"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Eduardo" }]
dependencies = ["jupyterlab>=4.0.0"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_trillia_theme/labextension" = "share/jupyter/labextensions/jupyterlab-trillia-theme"
"jupyterlab_trillia_theme/install.json" = "share/jupyter/labextensions/jupyterlab-trillia-theme/install.json"

[tool.hatch.build.targets.wheel]
include = [
  "jupyterlab_trillia_theme/install.json",
  "jupyterlab_trillia_theme/labextension/**",
]
